--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -281,10 +281,13 @@ footer nav {
     padding-right: 12px;
     padding-top: 7px;
     padding-bottom: 7px;
+    font-size: 12px !important;
   }
   header p {
     font-size: 0.85rem;
     top: 3%;
+    color: black;
+    text-decoration: none;
   }
   .blog-link {
     display: none;
