--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -68,10 +68,21 @@ header img {
   right: 2.5%;
   top: 10%;
   display: flex;
-  gap: 45px;
+  gap: 20px;
   display: flex;
   align-items: center;
   text-align: center;
+}
+
+.box {
+  display: flex;
+  gap: 45px;
+  border: 2.5px solid black;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  text-wrap: nowrap;
 }
 
 .top a {
@@ -87,13 +98,20 @@ header img {
 
 header p {
   position: absolute;
-  top: 10%;
+  top: 12%;
   left: 5%;
   font-weight: 600;
   font-size: 25px;
   display: flex;
   align-items: center;
   text-align: center;
+  color: black;
+  text-decoration: none;
+  border: 2.5px solid black;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
 }
 
 .block-link {
@@ -118,7 +136,7 @@ header p {
   justify-content: center;
   text-align: center;
   position: relative;
-  margin-top: -5%;
+  margin-top: -12%;
   margin-bottom: 0;
   padding: 0;
 }
@@ -128,6 +146,7 @@ header p {
   opacity: 10%;
   margin-top: 15%;
   max-width: 100vw;
+  transform: scale(0.65);
 }
 
 .onep1, .onep2 {
@@ -136,19 +155,19 @@ header p {
 }
 
 .onep1 {
-  margin-top: 22%;
+  margin-top: 35%;
   font-size: 45px;
 }
 
 .onep2 {
-  margin-top: 48%;
+  margin-top: 50%;
   font-weight: bold;
   font-size: 25px;
 }
 
 .section1 a {
   position: absolute;
-  margin-top: 35%;
+  margin-top: 42%;
   background-color: black;
   color: white;
   text-decoration: none;
@@ -177,11 +196,15 @@ header p {
   padding-bottom: 2.5%;
   display: flex;
   flex-direction: column;
-  margin-top: -2.5%;
+  margin-top: -15%;
 }
 
 .section2 h2 {
   text-wrap: nowrap;
+}
+.section2 h2 a {
+  color: white;
+  text-decoration: none;
 }
 
 .section2 div {
@@ -234,6 +257,10 @@ header p {
   position: relative;
 }
 
+.section3 {
+  margin-top: 5%;
+}
+
 .section3 img {
   position: absolute;
   transform: rotate(-2.5deg); /* or -15deg for opposite direction */
@@ -265,7 +292,7 @@ header p {
 }
 
 .links-container div a {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .video-container {
@@ -284,12 +311,14 @@ header p {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
 
-.section3 {
-  margin-top: 5%;
-}
-
 .section3 h2 {
   font-size: 40px;
+}
+
+.section4 {
+  margin-top: -5%;
+  border-top: 2.5px solid black;
+  padding-top: 5%;
 }
 
 .connection-container {
@@ -351,6 +380,7 @@ footer nav {
     overflow-x: hidden;
   }
   .section1 img {
+    transform: scale(0.95);
     overflow-x: hidden;
   }
   header img {
@@ -366,6 +396,9 @@ footer nav {
     gap: 10px;
     top: 14.5%;
   }
+  .box {
+    border: none;
+  }
   .top a {
     font-size: 14px;
   }
@@ -375,10 +408,12 @@ footer nav {
     padding-right: 12px;
     padding-top: 7px;
     padding-bottom: 7px;
+    font-size: 12px !important;
   }
   header p {
     font-size: 0.85rem;
-    top: 15.5%;
+    top: 15.25%;
+    border: none;
   }
   .blog-link {
     display: none;
@@ -393,11 +428,11 @@ footer nav {
     font-size: 0.85rem;
   }
   .onep1 {
-    margin-top: 20%;
+    margin-top: 25%;
     font-size: 1.2rem !important;
   }
   .onep2 {
-    margin-top: 58%;
+    margin-top: 62%;
   }
   .section1 a {
     font-size: 16px;
