--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -73,12 +73,14 @@ h1 {
         padding-right: 12px;
         padding-top: 7px;
         padding-bottom: 7px;
+        font-size: 12px !important;
        }
     
 
        header p {
         font-size: $font-p-mobile;
         top: 3%;
+        @include link-style(black);
        }
 
        .blog-link {
