--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -74,6 +74,8 @@ header p {
   display: flex;
   align-items: center;
   text-align: center;
+  color: black;
+  text-decoration: none;
 }
 
 .block-link {
@@ -290,6 +292,7 @@ footer nav {
     padding-right: 12px;
     padding-top: 7px;
     padding-bottom: 7px;
+    font-size: 12px !important;
   }
   header p {
     font-size: 0.85rem;
