--- a/scss/partials/_links.scss
+++ b/scss/partials/_links.scss
@@ -1,3 +1,5 @@
+@import 'font-sizes';
+
 @mixin link-style($color) {
     color: $color;
     text-decoration: none;
@@ -21,7 +23,7 @@
     @include link-style(white);
     @include hover-rise();
     background-color: black;
-    font-size: 18px;
+    font-size: $font-h3-size;
     width: fit-content;
     padding-left: 1%;
     padding-right: 1%;
@@ -43,6 +45,7 @@
     border-radius: 12px;
     margin-top: 5%;
     margin-bottom: 3%;
+    font-size: $font-h3-mobile;
 }
 
 }
