--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -4,7 +4,7 @@
   display: inline-block;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   background-color: black;
-  font-size: 18px;
+  font-size: 35px;
   width: -moz-fit-content;
   width: fit-content;
   padding-left: 1%;
@@ -30,6 +30,7 @@
     border-radius: 12px;
     margin-top: 5%;
     margin-bottom: 3%;
+    font-size: 1rem;
   }
 }
 * {
@@ -156,7 +157,7 @@ h1 {
   display: inline-block;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   background-color: black;
-  font-size: 18px;
+  font-size: 35px;
   width: -moz-fit-content;
   width: fit-content;
   padding-left: 1%;
@@ -364,5 +365,6 @@ footer nav {
     border-radius: 12px;
     margin-top: 5%;
     margin-bottom: 3%;
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=tools_styling.css.map */
