--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -123,11 +123,20 @@ h1 {
 }
 
 .section2 h2, .section3 h2 {
+  border-bottom: 3px solid black;
+}
+
+.section2, .section3 {
   margin-left: 5%;
+  margin-right: 5%;
 }
 
 .section2 {
-  margin-top: 15%;
+  margin-top: 12%;
+}
+
+.section3 h2 {
+  margin-bottom: 3%;
 }
 
 .tools {
@@ -139,8 +148,10 @@ h1 {
   border-bottom: 3px solid black;
   padding-bottom: 2.5%;
   margin-bottom: 2.5%;
-  margin-left: 5%;
-  margin-right: 5%;
+}
+
+#last-listed-tool {
+  border-bottom: none;
 }
 
 .section2 h2, .section3 h2 {
@@ -192,9 +203,17 @@ h1 {
 .tools-content h3 {
   margin-bottom: 5%;
 }
+.tools-content a {
+  color: black;
+  text-decoration: none;
+}
+.tools-content a:hover {
+  text-decoration: underline;
+}
 
 .tools-content img {
   width: 50%;
+  margin-top: 2.5%;
 }
 
 .section4 {
