--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -74,11 +74,22 @@ h1 {
 }
 
 .section2 h2, .section3 h2 {
+    border-bottom: 3px solid black;
+}
+
+.section2, .section3 {
     margin-left: 5%;
+    margin-right: 5%;
 }
 
 .section2 {
-    margin-top: 15%;
+    margin-top: 12%;
+}
+
+.section3 {
+    h2 {
+        margin-bottom: 3%;
+    }
 }
 
 
@@ -88,8 +99,10 @@ h1 {
     border-bottom: 3px solid black;
     padding-bottom: 2.5%;
     margin-bottom: 2.5%;
-    margin-left: 5%;
-    margin-right: 5%;
+}
+
+#last-listed-tool {
+    border-bottom: none;
 }
 
 .section2 h2, .section3 h2 {
@@ -130,10 +143,19 @@ h1 {
     h3 {
         margin-bottom: 5%;
     }
+
+    a {
+        @include link-style(black);
+        
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .tools-content img {
     width: 50%;
+    margin-top: 2.5%;
 }
 
 
