--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -67,7 +67,7 @@ header img {
 .top {
   position: absolute;
   right: 2.5%;
-  top: 10%;
+  top: 11%;
   display: flex;
   gap: 20px;
   display: flex;
@@ -75,19 +75,8 @@ header img {
   text-align: center;
 }
 
-.box {
-  display: flex;
-  gap: 45px;
-  border: 2.5px solid black;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
-  text-wrap: nowrap;
-}
-
 .top a {
-  color: black;
+  color: white;
   text-decoration: none;
   font-weight: 600;
   font-size: 20px;
@@ -99,25 +88,30 @@ header img {
 
 header p {
   position: absolute;
-  top: 12%;
+  top: 12.5%;
   left: 5%;
   font-weight: 600;
   font-size: 25px;
   display: flex;
   align-items: center;
   text-align: center;
-  color: black;
+  color: white;
   text-decoration: none;
-  border: 2.5px solid black;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+}
+
+.top-bar {
+  position: absolute;
+  top: 0;
+  background-color: black;
+  width: 100vw;
+  height: 150px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: -1;
 }
 
 .block-link {
-  background-color: black;
-  color: white !important;
+  background-color: white;
+  color: black !important;
   border-radius: 8px;
   padding-left: 24px;
   padding-right: 24px;
@@ -397,9 +391,6 @@ footer nav {
     gap: 10px;
     top: 14.5%;
   }
-  .box {
-    border: none;
-  }
   .top a {
     font-size: 14px;
   }
@@ -414,7 +405,6 @@ footer nav {
   header p {
     font-size: 0.85rem;
     top: 15.25%;
-    border: none;
   }
   .blog-link {
     display: none;
