--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -374,6 +374,9 @@ footer nav {
   html {
     overflow-x: hidden;
   }
+  .top-bar {
+    height: 125px;
+  }
   .section1 img {
     transform: scale(0.95);
     overflow-x: hidden;
@@ -389,7 +392,7 @@ footer nav {
   }
   .top {
     gap: 10px;
-    top: 14.5%;
+    top: 8.5%;
   }
   .top a {
     font-size: 14px;
@@ -404,7 +407,7 @@ footer nav {
   }
   header p {
     font-size: 0.85rem;
-    top: 15.25%;
+    top: 9.25%;
   }
   .blog-link {
     display: none;
