--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -66,6 +66,15 @@ html {
   text-decoration: underline;
 }
 
+.top-bar {
+  position: absolute;
+  top: 0;
+  background-color: black;
+  width: 100vw;
+  height: 120px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 header p {
   position: absolute;
   top: 8%;
@@ -116,13 +125,16 @@ h1 {
   .top a {
     font-size: 14px;
   }
+  .top-bar {
+    height: 70px;
+  }
   .block-link {
     border-radius: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 8px;
+    padding-right: 8px;
     padding-top: 7px;
     padding-bottom: 7px;
-    font-size: 12px !important;
+    font-size: 10px !important;
   }
   header p {
     font-size: 0.85rem;
