--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -82,15 +82,25 @@ body {
 .top {
     position: absolute;
     right: 2.5%;
-    top: 8%;
+    top: 5%;
     display: flex;
     gap: 45px;
     @include center(vertical);
     z-index: 1000;
 }
 
+.top-bar {
+    position: absolute;
+    top: 0;
+    background-color: black;
+    width: 100vw;
+    height: 120px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+
 .top a {
-    @include link-style(black);
+    @include link-style(white);
     font-weight: 600;
     font-size: 20px;
 }
@@ -101,16 +111,17 @@ body {
 
 header p {
     position: absolute;
-    top: 10%;
+    top: 6%;
     left: 5%;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     @include center(vertical);
+    @include link-style(white);
 }
 
 .block-link {
-    background-color: black;
-    color: white !important;
+    background-color: white;
+    color: black !important;
     border-radius: 8px;
     padding-left: 24px;
     padding-right: 24px;
@@ -223,6 +234,11 @@ h1 {
         gap: 10px;
         top: 2%;
        }
+
+       .top-bar {
+        height: 70px;
+      }
+    
     
        .top a {
         font-size: 14px !important;
@@ -230,18 +246,18 @@ h1 {
 
        .block-link {
         border-radius: 8px;
-        padding-left: 12px;
-        padding-right: 12px;
+        padding-left: 8px;
+        padding-right: 8px;
         padding-top: 7px;
         padding-bottom: 7px;
-        font-size: 12px !important;
+        font-size: 10px !important;
        }
     
 
        header p {
         font-size: $font-p-mobile;
         top: 3%;
-        @include link-style(black);
+        @include link-style(white);
        }
 
        .blog-link {
