--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -21,6 +21,15 @@
     text-decoration: underline;
 }
 
+.top-bar {
+    position: absolute;
+    top: 0;
+    background-color: black;
+    width: 100vw;
+    height: 120px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
 header p {
     position: absolute;
     top: 8%;
@@ -67,13 +76,17 @@ h1 {
         font-size: 14px;
        }
 
+       .top-bar {
+        height: 70px;
+      }
+
        .block-link {
         border-radius: 8px;
-        padding-left: 12px;
-        padding-right: 12px;
+        padding-left: 8px;
+        padding-right: 8px;
         padding-top: 7px;
         padding-bottom: 7px;
-        font-size: 12px !important;
+        font-size: 10px !important;
        }
     
 
