--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -47,7 +47,7 @@ html {
 .top {
   position: absolute;
   right: 2.5%;
-  top: 8%;
+  top: 5%;
   display: flex;
   gap: 45px;
   display: flex;
@@ -55,8 +55,17 @@ html {
   text-align: center;
 }
 
+.top-bar {
+  position: absolute;
+  top: 0;
+  background-color: black;
+  width: 100vw;
+  height: 120px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .top a {
-  color: black;
+  color: white;
   text-decoration: none;
   font-weight: 600;
   font-size: 20px;
@@ -68,20 +77,20 @@ html {
 
 header p {
   position: absolute;
-  top: 8%;
+  top: 6%;
   left: 5%;
   font-weight: 600;
-  font-size: 25px;
+  font-size: 30px;
   display: flex;
   align-items: center;
   text-align: center;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
 .block-link {
-  background-color: black;
-  color: white !important;
+  background-color: white;
+  color: black !important;
   border-radius: 8px;
   padding-left: 24px;
   padding-right: 24px;
@@ -303,16 +312,22 @@ footer nav {
     gap: 10px;
     top: 2.5%;
   }
+  .top-bar {
+    height: 70px;
+  }
+  .top-bar {
+    height: 70px;
+  }
   .top a {
     font-size: 14px;
   }
   .block-link {
     border-radius: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 8px;
+    padding-right: 8px;
     padding-top: 7px;
     padding-bottom: 7px;
-    font-size: 12px !important;
+    font-size: 10px !important;
   }
   header p {
     font-size: 0.85rem;
