--- a/scss/homestyling-test1.scss
+++ b/scss/homestyling-test1.scss
@@ -6,10 +6,11 @@
 
 @import 'partials/font-sizes';
 
-@import 'partials/index-form';
 
-html {
-  background-color: white !important;
+h1 {
+    @include center(horizontal);
+    font-size: $font-h1-size;
+    margin-top: 20%;
 }
 
 h2 {
@@ -29,7 +30,7 @@ header img {
     right: 2.5%;
     top: 12%;
     display: flex;
-    gap: 45px;
+    gap: 20px;
     @include center(vertical);
 }
 
@@ -76,60 +77,42 @@ header p {
     @include hover-rise();
 }
 
-.hero {
-  @include flex();
 
-  gap: 5px;
-  margin-top: 2.5%;
-
-  h1 {
-    margin-top: 30%;
-    margin-left: 15%;
-    font-size: $font-h1-size;
-    margin-top: 20%;
-  }
-
-  img {
-    width: 50%;
+.section1 {
+    @include center(horizontal);
     position: relative;
-    margin-top: -2.5%;
-    right: 8%;
-    transform: scale(0.55);
-    z-index: -2;
-  }
-
-  .onep1 {
-    width: 75%;
-    margin-left: 15%;
-    font-size: 45px;
-    margin-top: 2.5%;
-  }
-
-  .hero-text {
-    z-index: 1;
-
-    img {
-      position: absolute;
-      left: 2%;
-      top: 18%;
-      transform: scale(0.8);
-      opacity: 10%;
-      z-index: -10;
-    }
-  }
+    margin-top: -12%;
+    margin-bottom: 0; // Add this if bottom margin exists
+    padding: 0;
 }
 
+.section1 img {
+    position: relative;
+    opacity: 10%;
+    margin-top: 15%;
+    max-width: 100vw;
+    transform: scale(0.65);
+}
 
+.onep1, .onep2 {
+    position: absolute;
+    width: 70%;
+}
+
+.onep1 {
+    margin-top: 15%;
+    font-size: 45px;
+}
 
 .onep2 {
-    margin-left: 15%;
-    margin-top: 5%;
-    width: 75%;
+    margin-top: 50%;
     font-weight: bold;
     font-size: $font-p-size;
 }
 
-.hero-text a {
+.section1 a {
+    position: absolute;
+    margin-top: 42%;
     background-color: black;
     @include link-style(white);
     border-radius: 25px;
@@ -139,10 +122,6 @@ header p {
     padding-bottom: 20px;
     font-size: 30px;
     @include hover-rise();
-    margin-top: 3%;
-    margin-left: 15%;
-    z-index: 2;
-    margin-bottom: 2.5%;
 }
 
 .section2 {
@@ -154,6 +133,7 @@ header p {
     padding-top: 2.5%;
     padding-bottom: 2.5%;
     @include flex-column();
+    margin-top: -15%;
 }
 
 .section2 h2 {
@@ -217,6 +197,16 @@ header p {
   margin-top: 5%;
 }
 
+.section3 img {
+    position: absolute;
+    transform: rotate(-2.5deg); /* or -15deg for opposite direction */
+    top: -30%;
+    right: -5%;
+    width: 70%;
+    z-index: -1;
+    
+}
+
 .section3-split {
     @include flex();
 }
@@ -269,9 +259,11 @@ header p {
 
   .connection-container {
     @include flex();
+    gap: 50px;
+    @include center(horizontal);
 
     div img {
-      width: 20%;
+      width: 50%;
       margin-top: 2.5%;
       margin-bottom: 2.5%;
     }
@@ -283,10 +275,6 @@ header p {
 
   .connection-container a {
     @include link-style(black);
-  }
-
-  .form-container {
-    width: 60%;
   }
 
 footer {
@@ -328,52 +316,10 @@ footer {
     height: 125px;
    }
 
-  .hero {
-    @include flex-column();
-    @include center(horizontal);
-    margin-top: 20%;
-    
-
-    .hero-text {
-      @include center(horizontal);
-      @include flex-column();
-
-      img {
-        margin: auto;
-        transform: scale(1.2);
-      }
-    
-    }
-
-    h1 {
-      font-size: $font-h1-mobile;
-      margin: auto;
-      margin-bottom: 2.5%;
-     }
-
-     .onep1 {
-      font-size: 24px;
-      margin: auto;
-      margin-bottom: 2.5%;
-     }
-     .onep2{
-      font-size: $font-p-mobile;
-      margin: auto;
-      margin-bottom: 2.5%;
-     }
-
-     img {
-      transform: scale(1);
-      margin: auto;
-      right: 0%;
-     }
-
-     a {
-      font-size: $font-a-mobile;
-      margin: auto;
-      margin-bottom: 5%;
-     }
-  }
+   .section1 img {
+    transform: scale(0.95);
+    overflow-x: hidden;
+   }
 
    header img {
     top: 8%;
@@ -412,6 +358,31 @@ footer {
 
    .blog-link {
     display: none;
+   }
+   
+    h1 {
+    font-size: $font-h1-mobile;
+   }
+
+   .section1 {
+    margin-top: -8%;
+   }
+
+   .section1 p {
+    font-size: $font-p-mobile;
+   }
+
+   .onep1 {
+    margin-top: 10%;
+    font-size: 1.2rem !important;
+   }
+   .onep2 {
+    margin-top: 62%;
+   }
+
+   .section1 a {
+    font-size: 16px;
+    border-radius: 20px;
    }
 
    .tools-container {
@@ -474,27 +445,6 @@ footer {
 
    .section4 {
     margin-top: 10%;
-   
-
-    .connection-container {
-      @include flex-column();
-
-      div {
-        @include center(horizontal);
-
-        img {
-          width: 40%;
-        }
-      }
-      
-
-      .form-container {
-        width: 100%;
-      form {
-        right: 0;
-      }
-    }
-    }
    }
 
    .section4 a h3 {
