--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -94,7 +94,7 @@ header p {
     position: relative;
     margin-top: -2.5%;
     right: 8%;
-    transform: scale(0.55);
+    transform: scale(0.80);
     z-index: -2;
   }
 
@@ -114,7 +114,7 @@ header p {
       top: 18%;
       transform: scale(0.8);
       opacity: 10%;
-      z-index: -10;
+      z-index: -15;
     }
   }
 }
@@ -291,6 +291,8 @@ header p {
 
 footer {
   margin-top: 2.5%;
+  border-top: 1px solid gray;
+  padding-top: 2.5%;
 }
 
 
