--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -46,7 +46,7 @@ html {
 .top {
   position: absolute;
   right: 2.5%;
-  top: 8%;
+  top: 5%;
   display: flex;
   gap: 45px;
   display: flex;
@@ -76,13 +76,15 @@ html {
 
 header p {
   position: absolute;
-  top: 8%;
+  top: 6%;
   left: 5%;
   font-weight: 600;
   font-size: 25px;
   display: flex;
   align-items: center;
   text-align: center;
+  color: white;
+  text-decoration: none;
 }
 
 .block-link {
@@ -285,7 +287,7 @@ footer nav {
   margin-bottom: 2.5%;
 }
 .section1 img {
-  width: 60%;
+  width: 50%;
   margin: auto;
   margin-bottom: 2.5%;
 }
