--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -45,7 +45,6 @@ html {
 }
 form {
   width: 100%;
-  margin-top: 5%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -271,6 +270,7 @@ header p {
 
 .section2 h2 {
   text-wrap: nowrap;
+  margin-left: 4%;
 }
 .section2 h2 a {
   color: white;
@@ -386,7 +386,7 @@ header p {
   display: flex;
 }
 .connection-container div img {
-  width: 20%;
+  width: 40%;
   margin-top: 2.5%;
   margin-bottom: 2.5%;
 }
