--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -5,7 +5,7 @@
 .top {
     position: absolute;
     right: 2.5%;
-    top: 8%;
+    top: 5%;
     display: flex;
     gap: 45px;
     @include center(vertical);
@@ -32,11 +32,12 @@
 
 header p {
     position: absolute;
-    top: 8%;
+    top: 6%;
     left: 5%;
     font-weight: 600;
     font-size: 25px;
     @include center(vertical);
+    @include link-style(white);
 }
 
 .block-link {
