--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -481,9 +481,10 @@ footer nav {
     margin-bottom: 2.5%;
   }
   .hero img {
-    transform: scale(1);
+    transform: scale(1.2);
     margin: auto;
     right: 0%;
+    margin-top: -3%;
   }
   .hero a {
     font-size: 0.8rem;
