--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -6,77 +6,16 @@
 
 @import 'partials/generalstyling';
 
+@import 'partials/index-form';
+
 body {
-    margin-top: 10%;
+    margin-top: 15%;
 }
 
 .section1 {
     @include center(horizontal);
     @include flex-column();
-    margin-bottom: 4%;
 }
-
-.section1 h2 {
-    margin-top: 5%; 
-}
-
-.section1 p {
-    margin-top: 1%;
-}
-
-
-.section2 {
-    @include center(horizontal);
-    position: relative;
-    margin-top: 0%;
-    margin-bottom: 0; // Add this if bottom margin exists
-    padding: 0; 
-    
-}
-
-.section2 img {
-    position: absolute;
-    opacity: 30%;
-    max-width: 100vw;
-    @include center(horizontal);
-    transform: scale(1.25);
-}
-
-.content {
-    position: absolute;
-    z-index: 1;
-    @include flex-column();
-    @include center(horizontal);
-    margin-top: 2.5%;
-}
-
-.content div {
-      margin-bottom: 10%;
-      @include flex-column();
-      line-height: 1.5;
-  }
-
-  .content .left {
-    margin-right: 50%;
-  }
-
-  .content .right {
-    margin-left: 50%;
-  }
-
-  .content div p {
-    
-        word-break: break-word;       // breaks long words or strings when needed
-        overflow-wrap: break-word;    // adds extra safety for older browsers
-        white-space: normal;          // allows wrapping (in case nowrap was applied)
-        max-width: 1000px;             // optional: controls wrapping width
-        font-size: $font-p-size;
-      
-  }
-
-  .content div h2 {
-    font-size: $font-h3-size;
-  }
 
 
 .top {
@@ -134,6 +73,121 @@ h1 {
     font-size: $font-h1-size;
 }
 
+.coin {
+    width: 10%;
+    position: absolute;
+}
+
+.coin.one {
+    top: 30%;
+    left: 15%;
+}
+
+.coin.two {
+    top: 40%;
+    right: 10%;
+}
+
+.coin.three {
+    top: 50%;
+    right: 20%;
+}
+
+.coin.four {
+    top: 55%;
+    left: 5%;
+}
+
+.coin.five {
+    top: 120%;
+    left: 30%;
+}
+
+.coin.six {
+
+    top: 145%;
+    right: 20%;
+}
+.plant-container {
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 2rem;
+  }
+  
+  .plant-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .text-and-line {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    max-width: 300px;
+    gap: 10px;
+
+    .line {
+      width: 80px;
+      height: 2px;
+      background-color: black;
+    }
+  
+    .text-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+  
+    .label {
+      font-size: 1.5rem;
+      margin: 0;
+      font-weight: bold;
+    }
+  
+    p {
+      font-size: 1rem;
+      margin-top: 0.5rem;
+      max-width: 300px;
+    }
+  }
+  
+  /* Specific positioning for each text-and-line */
+  .text-and-line {
+    top: 10%;  // Around the head
+    left: 15%;
+    flex-direction: row-reverse;
+  }
+  
+  .text-and-line.second {
+    top: 30%;  // First left leaf
+    left: -1%;
+    flex-direction: row-reverse;
+  }
+  
+  .text-and-line.third {
+    top: 36%;  // Right side of second leaf
+    right: 1%;
+    left: auto;
+    flex-direction: row; // line -> text (flip because on right)
+    
+    .text-content {
+      align-items: center;
+      text-align: center;
+    }
+  }
+  
+  .text-and-line.fourth {
+    top: 70%; // Roots
+    left: 10%;
+    flex-direction: row-reverse;
+  }
+  
+
 .connection-container {
     @include flex();
     gap: 50px;
@@ -159,7 +213,6 @@ h1 {
     padding-left: 5%;
     padding-right: 5%;
     position: relative;
-    margin-top: 90%;
 
     h2 {
         font-size: $font-h2-size;
@@ -222,6 +275,65 @@ h1 {
         font-size: $font-h2-mobile;
     }
 
+    .section2 {
+
+        .coin.two {
+            top: 32%;
+            right: 30%;
+        }
+
+        .coin.three {
+            top: 60%;
+        }
+
+        .coin.five {
+            top: 25%;
+            left: 5%;
+        }
+        .coin.six {
+            top: 15%;
+            right: 10%;
+        }
+    }
+
+    .plant-container {
+        margin-top: 15%;
+        max-width: 750px;
+        width: 80%;
+
+        .line {
+            display: none;
+        }
+
+        .plant-image {
+            width: 75%;
+            margin-top: 10%;
+        }
+
+        .text-and-line {
+            max-width: 400px;
+            top: -12%;
+        }
+
+        .text-and-line.second {
+            max-width: 150px;
+            top: 25%;
+        }
+
+        .text-and-line.third {
+            max-width: 150px;
+            top: 35%;
+        }
+
+        .text-and-line.fourth {
+            top: 95%;
+        }
+
+        p {
+            font-size: $font-p-mobile;
+        }
+    }
+
     h3 {
         font-size: $font-h3-mobile;
     }
@@ -268,39 +380,6 @@ h1 {
         margin-top: 10%;
     }
 
-    .content {
-        gap: 30px;
-        top: 5%;
-        margin-left: 3%;
-        margin-right: 3%;
-
-        p {
-            line-height: 1;
-        }
-    }
-
-    .content div h2 {
-        font-size: $font-h2-mobile;
-    }
-
-    .content div p {
-
-        max-width: 400px;
-        font-size: $font-p-mobile;            // optional: controls wrapping width
-  }
-
-  .content .left {
-    margin-right: 35%;
-  }
-
-  .content .right {
-    margin-left: 35%;
-  }
-
-  .content div {
-    margin-bottom: 0%;
-  }
-
     footer p {
         margin-left: 5%;
         font-size: $font-p-mobile;
@@ -317,7 +396,8 @@ h1 {
       }
 
       .section3 {
-        margin-top: 150%;
+
+        margin-top: 30%;
     
         h2 {
             font-size: $font-h2-mobile;
