--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -43,6 +43,112 @@ html {
   overflow-x: hidden;
 }
 
+.connection-container {
+  display: flex;
+}
+.connection-container div img {
+  width: 40%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+}
+
+.form-container {
+  width: 60%;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+  right: 25%;
+}
+
+form .row {
+  display: flex;
+  gap: 20px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.row #email {
+  width: 100%;
+}
+
+form .col {
+  flex: 1;
+}
+
+form input.form-control {
+  width: 100%;
+  padding: 15px 20px;
+  font-size: 18px;
+  border: 2px solid black;
+  border-radius: 25px;
+  background-color: white;
+  color: black;
+  outline: none;
+  transition: all 0.2s ease;
+}
+
+form input.form-control::-moz-placeholder {
+  color: gray;
+}
+
+form input.form-control::placeholder {
+  color: gray;
+}
+
+form input.form-control:focus {
+  border-color: black;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.submit-btn {
+  background-color: black;
+  color: white;
+  padding: 15px 30px;
+  font-size: 20px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-top: 10px;
+}
+
+.submit-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+footer {
+  margin-top: 2.5%;
+  border-top: 1px solid gray;
+  padding-top: 2.5%;
+}
+
+@media screen and (max-width: 768px) {
+  .connection-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .connection-container div {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+  .connection-container div img {
+    width: 40%;
+  }
+  .connection-container .form-container {
+    width: 100%;
+  }
+  .connection-container .form-container form {
+    right: 0;
+  }
+}
 .top {
   position: absolute;
   right: 2.5%;
