--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -312,17 +312,20 @@ h1 {
 
         .text-and-line {
             max-width: 400px;
+            left: 12%;
             top: -12%;
         }
 
         .text-and-line.second {
             max-width: 150px;
             top: 25%;
+            left: -1%;
         }
 
         .text-and-line.third {
             max-width: 150px;
             top: 35%;
+            left: 62%;
         }
 
         .text-and-line.fourth {
