testing out coin postioning

--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -277,17 +277,25 @@ h1 {
 
     .section2 {
 
+        .coin.one {
+            top: 20%;
+        }
+
         .coin.two {
-            top: 32%;
+            top: 40%;
             right: 30%;
         }
 
         .coin.three {
-            top: 60%;
+            top: 80%;
+        }
+
+        .coin.four {
+            top: 70%;
         }
 
         .coin.five {
-            top: 25%;
+            top: 15%;
             left: 5%;
         }
         .coin.six {
