--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -420,15 +420,21 @@ footer nav {
   .section1 h2, .section2 div h2 {
     font-size: 1.5rem;
   }
+  .section2 .coin.one {
+    top: 20%;
+  }
   .section2 .coin.two {
-    top: 32%;
+    top: 40%;
     right: 30%;
   }
   .section2 .coin.three {
-    top: 60%;
+    top: 80%;
+  }
+  .section2 .coin.four {
+    top: 70%;
   }
   .section2 .coin.five {
-    top: 25%;
+    top: 15%;
     left: 5%;
   }
   .section2 .coin.six {
