--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -43,11 +43,30 @@ html {
   overflow-x: hidden;
 }
 
+#join-us {
+  background-color: black;
+  color: white;
+  padding-top: 5%;
+}
+#join-us h2 {
+  font-size: 40px;
+}
+#join-us h3 {
+  font-size: 35px;
+}
+#join-us p {
+  font-size: 25px;
+}
+
 .connection-container {
   display: flex;
+  padding-bottom: 2.5%;
+}
+.connection-container div {
+  color: white;
 }
 .connection-container div img {
-  width: 40%;
+  width: 50%;
   margin-top: 2.5%;
   margin-bottom: 2.5%;
 }
@@ -85,7 +104,7 @@ form input.form-control {
   width: 100%;
   padding: 15px 20px;
   font-size: 18px;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 25px;
   background-color: white;
   color: black;
@@ -103,15 +122,15 @@ form input.form-control::placeholder {
 
 form input.form-control:focus {
   border-color: black;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgb(251, 251, 251);
 }
 
 .submit-btn {
-  background-color: black;
-  color: white;
+  background-color: white;
+  border: 1px solid white;
+  color: black;
   padding: 15px 30px;
   font-size: 20px;
-  border: none;
   border-radius: 25px;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -124,26 +143,32 @@ form input.form-control:focus {
 }
 
 footer {
-  margin-top: 2.5%;
-  border-top: 1px solid gray;
   padding-top: 2.5%;
 }
 
 @media screen and (max-width: 768px) {
+  #join-us {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
   .connection-container {
     display: flex;
     flex-direction: column;
+    padding-bottom: 8%;
   }
   .connection-container div {
     display: flex;
     justify-content: center;
     text-align: center;
+    color: white;
   }
   .connection-container div img {
     width: 40%;
   }
   .connection-container .form-container {
     width: 100%;
+    margin-top: 5%;
   }
   .connection-container .form-container form {
     right: 0;
@@ -292,8 +317,8 @@ h1 {
 .text-and-line .text-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  align-items: left;
+  text-align: left;
 }
 .text-and-line .label {
   font-size: 1.5rem;
@@ -326,8 +351,8 @@ h1 {
   flex-direction: row;
 }
 .text-and-line.third .text-content {
-  align-items: center;
-  text-align: center;
+  align-items: right;
+  text-align: right;
 }
 
 .text-and-line.fourth {
@@ -354,7 +379,7 @@ h1 {
 }
 
 .connection-container a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -364,15 +389,6 @@ h1 {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
-}
-.section3 h2 {
-  font-size: 40px;
-}
-.section3 h3 {
-  font-size: 35px;
-}
-.section3 p {
-  font-size: 25px;
 }
 
 footer {
@@ -429,6 +445,7 @@ footer nav {
   }
   .section2 .coin.three {
     top: 80%;
+    right: 2.5%;
   }
   .section2 .coin.four {
     top: 70%;
@@ -458,18 +475,34 @@ footer nav {
     left: 11%;
     top: -12%;
   }
+  .plant-container .text-and-line .text-content {
+    align-items: center;
+    text-align: center;
+  }
   .plant-container .text-and-line.second {
     max-width: 150px;
     top: 25%;
     left: -1%;
+  }
+  .plant-container .text-and-line.second .text-content {
+    align-items: left;
+    text-align: left;
   }
   .plant-container .text-and-line.third {
     max-width: 150px;
     top: 35%;
     left: 62%;
   }
+  .plant-container .text-and-line.third .text-content {
+    align-items: right;
+    text-align: right;
+  }
   .plant-container .text-and-line.fourth {
     top: 95%;
+  }
+  .plant-container .text-and-line.fourth .text-content {
+    align-items: center;
+    text-align: center;
   }
   .plant-container p {
     font-size: 0.85rem;
@@ -535,5 +568,8 @@ footer nav {
   }
   .connection-container {
     gap: 0px;
+  }
+  .connection-container div {
+    text-align: center;
   }
 }/*# sourceMappingURL=about-us-styling.css.map */
