--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -43,11 +43,30 @@ html {
     font-size: 1rem;
   }
 }
+#join-us {
+  background-color: black;
+  color: white;
+  padding-top: 5%;
+}
+#join-us h2 {
+  font-size: 40px;
+}
+#join-us h3 {
+  font-size: 35px;
+}
+#join-us p {
+  font-size: 25px;
+}
+
 .connection-container {
   display: flex;
+  padding-bottom: 2.5%;
+}
+.connection-container div {
+  color: white;
 }
 .connection-container div img {
-  width: 40%;
+  width: 50%;
   margin-top: 2.5%;
   margin-bottom: 2.5%;
 }
@@ -85,7 +104,7 @@ form input.form-control {
   width: 100%;
   padding: 15px 20px;
   font-size: 18px;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 25px;
   background-color: white;
   color: black;
@@ -103,15 +122,15 @@ form input.form-control::placeholder {
 
 form input.form-control:focus {
   border-color: black;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgb(251, 251, 251);
 }
 
 .submit-btn {
-  background-color: black;
-  color: white;
+  background-color: white;
+  border: 1px solid white;
+  color: black;
   padding: 15px 30px;
   font-size: 20px;
-  border: none;
   border-radius: 25px;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -124,26 +143,32 @@ form input.form-control:focus {
 }
 
 footer {
-  margin-top: 2.5%;
-  border-top: 1px solid gray;
   padding-top: 2.5%;
 }
 
 @media screen and (max-width: 768px) {
+  #join-us {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
   .connection-container {
     display: flex;
     flex-direction: column;
+    padding-bottom: 8%;
   }
   .connection-container div {
     display: flex;
     justify-content: center;
     text-align: center;
+    color: white;
   }
   .connection-container div img {
     width: 40%;
   }
   .connection-container .form-container {
     width: 100%;
+    margin-top: 5%;
   }
   .connection-container .form-container form {
     right: 0;
@@ -225,6 +250,36 @@ header p {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   text-decoration: none !important;
+}
+
+.coin {
+  width: 10%;
+  position: absolute;
+}
+
+.coin.one {
+  top: 35%;
+  left: 45%;
+}
+
+.coin.two {
+  top: 40%;
+  right: 5%;
+}
+
+.coin.three {
+  top: 60%;
+  right: 10%;
+}
+
+.coin.four {
+  top: 55%;
+  left: 30%;
+}
+
+.coin.five {
+  top: 85%;
+  left: 35%;
 }
 
 .hero {
@@ -415,18 +470,12 @@ header p {
   font-size: 40px;
 }
 
-.section4 {
-  margin-top: -5%;
-  border-top: 2.5px solid black;
-  padding-top: 5%;
-}
-
 .connection-container div {
   text-align: left;
 }
 
 .connection-container a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
