--- a/scss/partials/_get-connected-footer.scss
+++ b/scss/partials/_get-connected-footer.scss
@@ -1,3 +1,4 @@
+@import 'font-sizes';
 
 .final {
     padding-left: 5%;
@@ -8,17 +9,6 @@
     font-size: $font-h2-size;
   }
 
-  .connection-container {
-    @include flex();
-    gap: 50px;
-    @include center(horizontal);
-
-    div img {
-      width: 50%;
-      margin-top: 2.5%;
-      margin-bottom: 2.5%;
-    }
-  }
 
   .connection-container div {
     text-align: left;
@@ -29,7 +19,7 @@
   }
 
 footer {
-  margin-top: 2.5%;
+  padding-top: 2.5%;
 }
 
 
