--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -174,6 +174,10 @@ h1 {
     padding-left: 5%;
     padding-right: 5%;
     position: relative;
+
+    h2 {
+        font-size: $font-h2-size;
+    }
 }
 
 .connection-container {
