Many updates made

--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -442,7 +442,8 @@ footer {
   display: none;
   margin: auto;
   margin-top: 10px;
-  background-color: rgba(95, 170, 115, 0.7);
+  background-color: white;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   padding: 15px;
   border-radius: 10px;
   width: 70%;
