--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
@@ -67,7 +67,8 @@
     display: none;
     margin: auto;
     margin-top: 10px;
-    background-color: rgba(95, 170, 115, 0.70);
+    background-color: white;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     padding: 15px;
     border-radius: 10px;
     width: 70%;
