--- a/scss/partials/_index-form.scss
+++ b/scss/partials/_index-form.scss
@@ -110,6 +110,18 @@ form {
 
     #join-us {
         @include center(horizontal);
+
+        h2 {
+            font-size: $font-h2-mobile;
+        }
+
+        h3 {
+            font-size: $font-h3-mobile;
+        }
+
+        p {
+            font-size: $font-p-size;
+        }
     }
 
 
