--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -14,11 +14,11 @@ html {
   display: inline-block;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   background-color: black;
-  font-size: 35px;
+  font-size: 40px;
   width: -moz-fit-content;
   width: fit-content;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
   padding-top: 0.5%;
   padding-bottom: 0.5%;
   border-radius: 15px;
@@ -151,6 +151,15 @@ footer {
     display: flex;
     justify-content: center;
     text-align: center;
+  }
+  #join-us h2 {
+    font-size: 1.5rem;
+  }
+  #join-us h3 {
+    font-size: 1rem;
+  }
+  #join-us p {
+    font-size: 25px;
   }
   .connection-container {
     display: flex;
