--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.scss
@@ -83,6 +83,23 @@
         margin-bottom: 15px;
     }
   }
+
+  .green {
+    color: #61AC74;
+  }
+
+  .black-white {
+    background-color: black;
+    color: white;
+  }
+
+  .lightblue {
+    color: rgb(116, 175, 197);
+  }
+
+  .bold {
+    font-weight: bold;
+  }
   
 
 
