--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -183,6 +183,51 @@ footer {
     right: 0;
   }
 }
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .top {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    position: absolute;
+    width: 200px;
+    padding: 20px;
+    border-radius: 0 0 0 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    margin-right: -2.5%;
+  }
+  .top a {
+    padding: 10px 0;
+    font-size: 1rem;
+    width: 100%;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+  }
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 5px;
+    position: absolute;
+    right: 20px;
+    top: 5%;
+    transform: translateY(-50%);
+    z-index: 1001;
+  }
+  .hamburger span {
+    width: 25px;
+    height: 3px;
+    background: white;
+    border-radius: 2px;
+  }
+  .block-link {
+    text-align: center !important;
+  }
+}
 .top {
   position: absolute;
   right: 2.5%;
@@ -471,9 +516,6 @@ footer nav {
   header p {
     font-size: 0.85rem;
     top: 4%;
-  }
-  .blog-link {
-    display: none;
   }
   .section1 {
     margin-top: 10%;
