--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -188,6 +188,13 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+  #mobileMenu {
+    display: none !important;
+  }
+  #mobileMenu.show {
+    display: flex !important;
+    flex-direction: column;
+  }
   .top {
     display: none;
     flex-direction: column;
