--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -183,6 +183,58 @@ footer {
     right: 0;
   }
 }
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  #mobileMenu {
+    display: none !important;
+  }
+  #mobileMenu.show {
+    display: flex !important;
+    flex-direction: column;
+  }
+  .top {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    position: absolute;
+    width: 200px;
+    padding: 20px;
+    border-radius: 0 0 0 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    margin-right: -2.5%;
+  }
+  .top a {
+    padding: 10px 0;
+    font-size: 1rem;
+    width: 100%;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+  }
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 5px;
+    position: absolute;
+    right: 20px;
+    top: 5%;
+    transform: translateY(-50%);
+    z-index: 1001;
+  }
+  .hamburger span {
+    width: 25px;
+    height: 3px;
+    background: white;
+    border-radius: 2px;
+  }
+  .block-link {
+    text-align: center !important;
+  }
+}
 html {
   background-color: white !important;
 }
@@ -578,9 +630,11 @@ footer nav {
   h3 {
     font-size: 1rem;
   }
-  .top {
-    gap: 8px;
+  .hamburger {
     top: 12.5%;
+  }
+  .top {
+    gap: 5px;
   }
   .top a {
     font-size: 14px;
@@ -596,9 +650,6 @@ footer nav {
   header p {
     font-size: 0.85rem;
     top: 13%;
-  }
-  .blog-link {
-    display: none;
   }
   .tools-container {
     gap: 5%;
