--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -197,7 +197,7 @@ h1 {
 }
 
 .connection-container a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -271,6 +271,10 @@ footer nav {
 .connection-container div {
   color: white;
 }
+.connection-container div a h3 {
+  width: 50%;
+  text-wrap: wrap;
+}
 .connection-container div img {
   width: 50%;
   margin-top: 2.5%;
@@ -279,6 +283,12 @@ footer nav {
 
 .form-container {
   width: 60%;
+  margin-top: -5%;
+}
+.form-container h3 {
+  position: relative;
+  right: 22%;
+  margin-bottom: 2.5%;
 }
 
 form {
@@ -384,8 +394,10 @@ footer {
   .connection-container .form-container {
     width: 100%;
     margin-top: 5%;
+    display: flex;
+    flex-direction: column;
   }
-  .connection-container .form-container form {
+  .connection-container .form-container form, .connection-container .form-container h3 {
     right: 0;
   }
 }
