--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -65,6 +65,10 @@ html {
 .connection-container div {
   color: white;
 }
+.connection-container div a h3 {
+  width: 50%;
+  text-wrap: wrap;
+}
 .connection-container div img {
   width: 50%;
   margin-top: 2.5%;
@@ -73,6 +77,12 @@ html {
 
 .form-container {
   width: 60%;
+  margin-top: -5%;
+}
+.form-container h3 {
+  position: relative;
+  right: 22%;
+  margin-bottom: 2.5%;
 }
 
 form {
@@ -178,8 +188,10 @@ footer {
   .connection-container .form-container {
     width: 100%;
     margin-top: 5%;
+    display: flex;
+    flex-direction: column;
   }
-  .connection-container .form-container form {
+  .connection-container .form-container form, .connection-container .form-container h3 {
     right: 0;
   }
 }
@@ -445,7 +457,7 @@ h1 {
 }
 
 .connection-container a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
