--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -247,6 +247,86 @@ footer {
     text-align: center !important;
   }
 }
+.final {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.final h2 {
+  font-size: 40px;
+}
+
+.connection-container div {
+  text-align: left;
+}
+
+.connection-container a {
+  color: white;
+  text-decoration: none;
+}
+
+footer {
+  padding-top: 2.5%;
+}
+
+footer p {
+  margin-left: 5%;
+  font-weight: 600;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+footer nav {
+  display: flex;
+  margin-left: 5%;
+  margin-top: 2.5%;
+  gap: 15px;
+}
+
+.credits {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+}
+
+.credits a {
+  margin-left: 15px;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  left: 80%;
+  bottom: 80px;
+}
+.social-media h2 {
+  margin-bottom: 2%;
+}
+.social-media .social-links {
+  display: flex;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  footer p {
+    margin-left: 5%;
+    font-size: 0.85rem;
+  }
+  .credits p {
+    font-size: 0.85rem;
+  }
+  .credits a {
+    margin-left: 5px;
+    font-size: 0.8rem;
+  }
+}
 html {
   background-color: white !important;
 }
