--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -10,6 +10,10 @@
 
 @import 'partials/hamburger';
 
+@import 'partials/text-styling';
+
+@import 'partials/get-connected-footer';
+
 
 .top {
     position: absolute;
@@ -82,7 +86,7 @@ h1 {
     position: absolute;
     margin-top: 22%;
     width: 60%;
-    font-size: $font-p-size;
+    font-size: 30px;
 }
 
 .section2 h2, .section3 h2 {
