--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -81,7 +81,7 @@ html {
 }
 .form-container h3 {
   position: relative;
-  right: 22%;
+  right: 24%;
   margin-bottom: 2.5%;
 }
 
@@ -247,6 +247,17 @@ footer {
     text-align: center !important;
   }
 }
+#join-us {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+}
+#join-us h2 {
+  font-size: 40px;
+}
+
 .final {
   padding-left: 5%;
   padding-right: 5%;
@@ -325,6 +336,15 @@ footer nav {
   .credits a {
     margin-left: 5px;
     font-size: 0.8rem;
+  }
+  .social-media {
+    left: 75%;
+  }
+  .social-media h2 {
+    font-size: 1.5rem;
+  }
+  .social-media .social-links img {
+    width: 50%;
   }
 }
 body {
