--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -148,14 +148,269 @@ html {
   overflow-x: hidden;
 }
 
-.blog-hero {
+#join-us {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+}
+#join-us h2 {
+  font-size: 40px;
+}
+
+.final {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.final h2 {
+  font-size: 40px;
+}
+
+.connection-container div {
+  text-align: left;
+}
+
+.connection-container a {
+  color: white;
+  text-decoration: none;
+}
+
+footer {
+  padding-top: 2.5%;
+}
+
+footer p {
+  margin-left: 5%;
+  font-weight: 600;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+footer nav {
+  display: flex;
+  margin-left: 5%;
+  margin-top: 2.5%;
+  gap: 15px;
+}
+
+.credits {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+}
+
+.credits a {
+  margin-left: 15px;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  left: 80%;
+  bottom: 80px;
+}
+.social-media h2 {
+  margin-bottom: 2%;
+}
+.social-media .social-links {
+  display: flex;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  footer p {
+    margin-left: 5%;
+    font-size: 0.85rem;
+  }
+  .credits p {
+    font-size: 0.85rem;
+  }
+  .credits a {
+    margin-left: 5px;
+    font-size: 0.8rem;
+  }
+  .social-media {
+    left: 75%;
+  }
+  .social-media h2 {
+    font-size: 1.5rem;
+  }
+  .social-media .social-links img {
+    width: 50%;
+  }
+}
+#join-us {
   background-color: black;
   color: white;
+  padding-top: 5%;
+}
+#join-us h2 {
+  font-size: 40px;
+}
+#join-us h3 {
+  font-size: 35px;
+}
+#join-us p {
+  font-size: 25px;
+}
+
+.connection-container {
+  display: flex;
+  padding-bottom: 2.5%;
+}
+.connection-container div {
+  color: white;
+}
+.connection-container div a h3 {
+  width: 50%;
+  text-wrap: wrap;
+}
+.connection-container div img {
+  width: 50%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+}
+
+.form-container {
+  width: 60%;
+  margin-top: -5%;
+}
+.form-container h3 {
+  position: relative;
+  right: 24%;
+  margin-bottom: 2.5%;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+  right: 25%;
+}
+
+form .row {
+  display: flex;
+  gap: 20px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.row #email {
+  width: 100%;
+}
+
+form .col {
+  flex: 1;
+}
+
+form input.form-control {
+  width: 100%;
+  padding: 15px 20px;
+  font-size: 18px;
+  border: 2px solid white;
+  border-radius: 25px;
+  background-color: white;
+  color: black;
+  outline: none;
+  transition: all 0.2s ease;
+}
+
+form input.form-control::-moz-placeholder {
+  color: gray;
+}
+
+form input.form-control::placeholder {
+  color: gray;
+}
+
+form input.form-control:focus {
+  border-color: black;
+  box-shadow: 0 0 5px rgb(251, 251, 251);
+}
+
+.submit-btn {
+  background-color: white;
+  border: 1px solid white;
+  color: black;
+  padding: 15px 30px;
+  font-size: 20px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-top: 10px;
+}
+
+.submit-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+footer {
+  padding-top: 2.5%;
+}
+
+@media screen and (max-width: 768px) {
+  #join-us {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+  #join-us h2 {
+    font-size: 1.5rem;
+  }
+  #join-us h3 {
+    font-size: 1rem;
+  }
+  #join-us p {
+    font-size: 25px;
+  }
+  .connection-container {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 8%;
+  }
+  .connection-container div {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: white;
+  }
+  .connection-container div img {
+    width: 40%;
+  }
+  .connection-container .form-container {
+    width: 100%;
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+  }
+  .connection-container .form-container form, .connection-container .form-container h3 {
+    right: 0;
+  }
+}
+.blog-hero {
+  background-image: url("../../images/blog-background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: black;
   text-align: center;
   padding: 80px 20px;
 }
 .blog-hero h1 {
-  font-size: 3rem;
+  font-size: 80px;
   margin-bottom: 20px;
 }
 .blog-hero p {
