--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -183,6 +183,17 @@ h1 {
     font-size: 1rem;
   }
 }
+#join-us {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+}
+#join-us h2 {
+  font-size: 40px;
+}
+
 .final {
   padding-left: 5%;
   padding-right: 5%;
@@ -262,6 +273,15 @@ footer nav {
     margin-left: 5px;
     font-size: 0.8rem;
   }
+  .social-media {
+    left: 75%;
+  }
+  .social-media h2 {
+    font-size: 1.5rem;
+  }
+  .social-media .social-links img {
+    width: 50%;
+  }
 }
 #join-us {
   background-color: black;
@@ -301,7 +321,7 @@ footer nav {
 }
 .form-container h3 {
   position: relative;
-  right: 22%;
+  right: 24%;
   margin-bottom: 2.5%;
 }
 
