--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -315,11 +315,14 @@ footer nav {
   left: 80%;
   bottom: 80px;
 }
-.social-media h2 {
-  margin-bottom: 2%;
-}
 .social-media .social-links {
   display: flex;
+  gap: 25px;
+  margin-top: 1.5%;
+}
+.social-media .social-links img {
+  width: 35px;
+  height: 35px;
 }
 
 @media screen and (max-width: 768px) {
